# SerpentEngine

./: .gitignore  LICENSE  conf.py  pyproject.toml
pygame_extended/: Game.py  JobBuffer.py  JobSystem.py
tests/: test_Game.py  test_JobBuffer.py  test_JobSystem.py
